--- a/pyReef/agutmpl2015.tex
+++ b/pyReef/agutmpl2015.tex
@@ -220,9 +220,9 @@ Over more than two decades, forward modelling of carbonate platform evolution ha
 
 \noindent The second family of mathematical models proposes to mitigate the lack of observational data and highly nonlinear relationships between the different components of a reef system by using a fuzzy logic approach \citep{Meesters98}. Fuzzy-based numerical models have proven to be a good alternative to conventional approach which often suffers from a lack of quantitative knowledge about the system being modeled, and therefore limits the effective use of available dataset \citep{Parcell98}. In addition to purely fuzzy-based stratigraphic forward modelling approaches (\textit{e.g.} \textit{FuzzyReef} from \citet{Parcell03} or \textit{Fuzzim} from \citet{Nordlund99}), other models have combined conventional hydrodynamics flow model and associated sediment transport with fuzzy logic and fuzzy-set theory to predict facies distribution in carbonate environments (an example being \textit{Sedsim} \citep{Griffiths01, Salles11}).
 
-\noindent The last family cellular automata
+\noindent The last family of deterministic numerical models are based on cellular automata approach. This technique has received some recent interests from the carbonate platform modelling community as it provides a simple and elegant method to investigate carbonate facies distribution. Using \textit{Carbocat}, \citet{Burgess13} was able to simulate the nature and origins of heterogeneous platform interior strata.
 
-\noindent To our knowledge, the models discussed above are all lacking the details of the wave hydrodynamic conditions and associated ocean circulation which are known to control not only the sediment transport in reef-lagoonal systems but also the dispersal of reef larvae and, therefore, the biogeographical distribution of reef organisms \citep{Lowe15}. In this paper, we design a numerical model that address this issue and enable to ... (I will wait to get some results before going further)
+\noindent In this paper, we propose a parallel 3D numerical model based on a hybrid approach which combines conventional techniques to compute wave transformation, ocean circulation and calcareous sand transport with a fuzzy logic method to simulate carbonate production and disintegration. To our knowledge, previous carbonate stratigraphic forward models are all lacking the details of the wave hydrodynamics and induced ocean circulation. It limits our understanding of coral reef systems and the predictive capabilities of these models. The work presented in this study and the development efforts behind this new code are specifically designed to address this issue. Our model could be use to better constrain sediment transport in reef-lagoonal systems and the geographical distribution of reef organisms over several hundreds to thousands of years. We first describe the physical methods, coupling strategies and main assumptions underlying our approach then we propose a series of simulations in which we explore reef responses to different climatic forcings... (I will wait to get some results before going further)
 
 \section{Physical description}
 
@@ -320,6 +320,14 @@ A common feature of many reef systems is the presence of diverse marine communit
 
 To our knowledge, transport law for calcareous sand based on their hydraulic characteristics has not been proposed yet. It has been recognised \citep{Prager96, Day97, Smith04} that variations in the hydraulic properties between siliceous and calcareous sand due to both their shapes and fall velocities lead to different transport behaviors. From flume experiments, \citet{Smith05} shows that transport models designed for siliceous particles might be applied after a correction factor has been introduced. From their experiment, the model of \citet{Engelund67} seems to provide the best fit with their dataset, however they conclude that these corrections are not universally applicable.
 
+\begin{figure*}
+\centering
+\noindent\includegraphics[width=37pc]{figs/fig3.pdf}
+\caption{Diagram of fuzzy logic process used in pyReef to evaluate a specific coral assemblage (assemblage 1) growth rate. The approach is illustrated from a point on the carbonate platform with a water depth of 8 m, an average sedimentation rate of 5 m/kyr and an average bottom orbital velocity of 1.5 m/s. The production rate is related to three control variables in this example: the \textit{sedimentation rate}, the \textit{water depth} and the \textit{wave energy}. For each of these variables two membership functions are defined (as an example the water depth is described using the \textit{shallow depth} and \textit{medium depth} functions). The combination of these functions forms a fuzzy set. Two fuzzy rules (based on \textit{if-then} rules) control the production of coral assemblage 1. Each production membership function is then restricted by the minimum (\textit{and} operator) of the membership degree values obtained from combination of the functions active in the considered rule. Aggregation of the truncated production membership functions is done by overlapping the curves and taking the maximum values. Finally the evaluation of the production rate is done through defuzzification by employing the centroid method which returns a \textit{crisp} value of 1.05 m/kyr for the considered point.
+}
+\label{fuzzyfig}
+\end{figure*}
+
 \noindent Therefore, in pyReef, we have chosen to build our transport model based on a classical approach. Assuming sediment transport induced by waves and currents, our method is derived from Soulsby and Van Rijn formulation \citep{Soulsby97}. We compute the total load transport rate resulting from the addition of bed load and suspended load for each type of loose carbonate sands initially set by the user. The model also assumes that each of sand particles are perfectly sorted. The method suits well with our approach as it can be applied in a quasi-steady form. An example of erosion deposition for a given long-term circulation representation is illustrated in figure \ref{circfig} panels f and h. The transport rate is defined by:
 \begin{equation}
 q_t = (A_{sb}+A_{ss}) \bar{v} \left[ \sqrt{\bar{v}^2 + \frac{0.018}{C_D}u_b} - \bar{u_{cr}}\right]^{2.4} (1-1.6 \nabla z)
@@ -358,14 +366,6 @@ In addition, to the above sediment transport model a multi-lithology non-linear 
 \noindent where $\kappa_k$ denotes the diffusion coefficient for sediment $k$, $c_k$ is the compaction ratio and $d_l$ is a constant representing the thickness of a prescribed top layer, in which sediments are transported. This set of PDEs is solved using a fully explicit schema following the approach from \citet{Clark10}.
 
 To simulate bed morphology and stratigraphic evolution a classical multi-level bed framework tracks the distribution of every coral assemblage through time by layers (\citet{Warner08} and reference therein). In pyReef, each layer stores the bulk properties including thickness and percentage of hard and loose coral assemblages. An active layer at the top of the stratigraphic pile is used to calculate the transport of the calcareous sand from both the wave-current driven and diffusion-based models presented above.
-
-\begin{figure*}
-\centering
-\noindent\includegraphics[width=37pc]{figs/fig3.pdf}
-\caption{Diagram of fuzzy logic process used in pyReef to evaluate a specific coral assemblage (assemblage 1) growth rate. The approach is illustrated from a point on the carbonate platform with a water depth of 8 m, an average sedimentation rate of 5 m/kyr and an average bottom orbital velocity of 1.5 m/s. The production rate is related to three control variables in this example: the \textit{sedimentation rate}, the \textit{water depth} and the \textit{wave energy}. For each of these variables two membership functions are defined (as an example the water depth is described using the \textit{shallow depth} and \textit{medium depth} functions). The combination of these functions forms a fuzzy set. Two fuzzy rules (based on \textit{if-then} rules) control the production of coral assemblage 1. Each production membership function is then restricted by the minimum (\textit{and} operator) of the membership degree values obtained from combination of the functions active in the considered rule. Aggregation of the truncated production membership functions is done by overlapping the curves and taking the maximum values. Finally the evaluation of the production rate is done through defuzzification by employing the centroid method which returns a \textit{crisp} value of 1.05 m/kyr for the considered point.
-}
-\label{fuzzyfig}
-\end{figure*}
 
 \subsection{Carbonate growth and disintegration}\label{fuzzy}
 
